// Vitest Snapshot v1

exports[`generate > basic - . 1`] = `
"
ℹ Output destination directory: \\".\\"

───┬──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
 ✔ │ File: static.txt
───┼──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
 1 │ static content

───┬──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
 ✔ │ File: nest/output.txt
───┼──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
 1 │ basic
 2 │ output
 3 │ output.txt
 4 │ nest/output.txt
 5 │ .txt
 6 │ nest

🐶 Generated 2 files!

     ✔ static.txt
     ✔ nest/output.txt

"
`;

exports[`generate > basic - override 1`] = `
"
ℹ Output destination directory: \\"override\\"

───┬──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
 ✔ │ File: static.txt
───┼──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
 1 │ static content

───┬──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
 ✔ │ File: nest/output.txt
───┼──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
 1 │ basic
 2 │ output
 3 │ output.txt
 4 │ override/nest/output.txt
 5 │ .txt
 6 │ override/nest

🐶 Generated 2 files!

     ✔ override/static.txt
     ✔ override/nest/output.txt

"
`;

exports[`generate > conditional-generate - false 1`] = `
"
ℹ Output destination directory: \\"false\\"

───┬──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
 ✔ │ File: false.txt
───┼──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
 1 │ If bool is false, output.

🐶 Generated 1 file! (1 skipped)

     ✔ false/false.txt
     ⚠ false/true.txt (skipped)

"
`;

exports[`generate > conditional-generate - true 1`] = `
"
ℹ Output destination directory: \\"true\\"

───┬──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
 ✔ │ File: true.txt
───┼──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
 1 │ If bool is true, output.

🐶 Generated 1 file! (1 skipped)

     ✔ true/true.txt
     ⚠ true/false.txt (skipped)

"
`;

exports[`generate > inputs - . 1`] = `
"
ℹ Output destination directory: \\"output\\"

───┬──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
 ✔ │ File: scaffdog.txt
───┼──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
 1 │ value: scaffdog
 2 │ choice: B
 3 │ path: output/scaffdog.txt

🐶 Generated 1 file!

     ✔ output/scaffdog.txt

"
`;

exports[`generate > inputs - deep/nest 1`] = `
"
ℹ Output destination directory: \\"output/deep/nest\\"

───┬──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
 ✔ │ File: e2e.txt
───┼──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
 1 │ value: e2e
 2 │ choice: C
 3 │ path: output/deep/nest/e2e.txt

🐶 Generated 1 file!

     ✔ output/deep/nest/e2e.txt

"
`;

exports[`generate > question - dist 1`] = `
"
ℹ Output destination directory: \\"dist\\"

────┬─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
  ✔ │ File: result.txt
────┼─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
  1 │ shorthand: input_shorthand
  2 │ input: input_basic
  3 │ input_with_initial: input_initial
  4 │ input_if: input_true
  5 │ input_if_with_initial: default
  6 │ input_if_without_initial: 
  7 │ bool: true
  8 │ bool_with_true: false
  9 │ bool_with_false: true
 10 │ bool_if: true
 11 │ bool_if_with_initial: true
 12 │ bool_if_without_initial: false
 13 │ list: A
 14 │ list_with_initial: B
 15 │ list_if: C
 16 │ list_if_with_initial: B
 17 │ list_if_without_initial: 
 18 │ checkbox: A
 19 │ checkbox_with_initial: B
 20 │ checkbox_if_with_initial: B,C
 21 │ checkbox_if_without_initial: 

🐶 Generated 1 file!

     ✔ dist/result.txt

"
`;

exports[`generate > vars - . 1`] = `
"
ℹ Output destination directory: \\".\\"

───┬──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
 ✔ │ File: index.txt
───┼──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
 1 │ raw: scaff-dog
 2 │ foo: ScaffDog

🐶 Generated 1 file!

     ✔ index.txt

"
`;
